--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -61,6 +61,71 @@
       position: absolute;
       width: 100%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .closeAll {
+        margin-top: 2vw;
+        width: 3vw;
+        height: 1.2vw;
+        background-color: #535353af;
+        border-radius: 2vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+      }
+
+      .firstRow {
+        width: 14.635416666666666vw;
+        height: 8.229166666666666vw;
+        margin-top: 3.5828125000000006vw;
+        flex-shrink: 0;
+        display: flex;
+        justify-content: center;
+
+        .fourApps {
+          width: 5.78125vw;
+          display: flex;
+          height: 7.604166666666667vw;
+          align-items: flex-start;
+          align-content: flex-start;
+          gap: 1.09375vw 0.5729166666666666vw;
+          flex-shrink: 0;
+          flex-wrap: wrap;
+          margin-left: 0.6770833333333334vw;
+        }
+      }
+
+      .secondRow {
+        position: relative;
+        display: flex;
+        width: 13.645833333333334vw;
+        height: 11.927083333333334vw;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 1.0729166666666667vw;
+        flex-wrap: wrap;
+        margin-top: 1.3020833333333333vw;
+        transition: all 0.3s ease;
+      }
+
+      .thirdRow {
+        display: flex;
+        width: 13.541666666666666vw;
+        height: 3.4895833333333335vw;
+        padding: 0.5208333333333334vw;
+        align-items: center;
+        gap: 0.5208333333333334vw;
+        flex-shrink: 0;
+        border-radius: 0.625vw;
+        position: relative;
+        overflow: hidden;
+        background: rgba(255, 255, 255, 0.1);
+        /* backdrop-filter: blur(0.3541666766007741vw); */
+        margin-top: 3.75vw;
+      }
     }
 
     .lockscreen {
@@ -479,6 +544,25 @@
   &:active {
     transform: scale(0.97);
   }
+}
+
+.clickanimationXl {
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  &:active {
+    transform: scale(0.9);
+  }
+}
+
+.iconName {
+  color: #FFF;
+  text-align: center;
+  font-family: "SFPro";
+  font-size: 0.5208333333333334vw;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 0.8333333333333334vw;
 }
 
 ::-webkit-scrollbar {
