--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -651,7 +651,8 @@
 
               .description {
                 height: 1.3vw;
-                overflow: hidden;;
+                overflow: hidden;
+                ;
                 color: rgba(255, 255, 255, 0.50);
                 font-size: 10px;
                 font-style: normal;
@@ -662,6 +663,127 @@
             }
           }
         }
+      }
+
+      .messageDetails {
+        width: 100%;
+
+        .headerbar {
+          width: 100%;
+          height: 6vw;
+          flex-shrink: 0;
+          border-radius: 2.2395833333333335vw 2.2395833333333335vw 0px 0px;
+          background: rgb(36, 36, 36);
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          position: relative;
+
+          .headerMainCont {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 2.3vw;
+            margin-top: 1.3vw;
+
+            .name {
+              margin-top: 0.3vw;
+              min-width: 10vw;
+              color: #FFF;
+              text-align: center;
+              font-size: 0.88125vw;
+              font-style: normal;
+              font-weight: 700;
+              line-height: normal;
+            }
+          }
+        }
+
+        .sender {
+          background-color: #0A84FF;
+
+          right: 0;
+        }
+
+        .receiver {
+          background-color: #979797;
+
+          left: 0;
+        }
+
+        .inputSFsada {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          margin-top: 0.8vw;
+          position: relative;
+        }
+      }
+    }
+  }
+
+  .fuckerMessager {
+    width: 16.757291666666666vw;
+    height: 36.12500000000001vw;
+    border-radius: 2.44vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    overflow: hidden;
+
+    .messageDetails {
+      width: 100%;
+
+      .headerbar {
+        width: 100%;
+        height: 6vw;
+        flex-shrink: 0;
+        border-radius: 2.2395833333333335vw 2.2395833333333335vw 0px 0px;
+        background: rgb(36, 36, 36);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        position: relative;
+
+        .headerMainCont {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-left: 2.3vw;
+          margin-top: 1.3vw;
+
+          .name {
+            margin-top: 0.3vw;
+            min-width: 10vw;
+            color: #FFF;
+            text-align: center;
+            font-size: 0.88125vw;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+          }
+        }
+      }
+
+      .sender {
+        background-color: #0A84FF;
+
+        right: 0;
+      }
+
+      .receiver {
+        background-color: #979797;
+
+        left: 0;
+      }
+
+      .inputSFsada {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 0.8vw;
+        position: relative;
       }
     }
   }
