--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -15,6 +15,7 @@
   color: white;
   position: relative;
   filter: blur(0px) !important;
+  overflow: hidden;
 
 
   .headerFrame {
@@ -676,6 +677,7 @@
           background: rgb(36, 36, 36);
           display: flex;
           flex-direction: row;
+          justify-content: space-between;
           align-items: center;
           position: relative;
 
@@ -683,8 +685,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-left: 2.3vw;
+
             margin-top: 1.3vw;
+
 
             .name {
               margin-top: 0.3vw;
@@ -723,67 +726,214 @@
   }
 
   .fuckerMessager {
-    width: 16.757291666666666vw;
-    height: 36.12500000000001vw;
-    border-radius: 2.44vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
     overflow: hidden;
 
-    .messageDetails {
-      width: 100%;
-
-      .headerbar {
-        width: 100%;
-        height: 6vw;
-        flex-shrink: 0;
-        border-radius: 2.2395833333333335vw 2.2395833333333335vw 0px 0px;
-        background: rgb(36, 36, 36);
+    .settings {
+      .card {
         display: flex;
-        flex-direction: row;
+        width: 15.052083333333334vw;
+        padding: 0.46875vw 0.4166666666666667vw;
         align-items: center;
-        position: relative;
+        gap: 0.5208333333333334vw;
+        border-radius: 0.2604166666666667vw;
+        background: rgba(255, 255, 255, 0.12);
+        margin-left: 0.8vw;
+        margin-top: 0.7vw;
 
-        .headerMainCont {
+        .NameAndBottoer {
           display: flex;
+          width: 8.645833333333334vw;
           flex-direction: column;
-          align-items: center;
-          margin-left: 2.3vw;
-          margin-top: 1.3vw;
+          align-items: flex-start;
+          gap: 0.10416666666666667vw;
+          flex-shrink: 0;
 
           .name {
-            margin-top: 0.3vw;
-            min-width: 10vw;
+            height: 1.0416666666666667vw;
             color: #FFF;
-            text-align: center;
-            font-size: 0.88125vw;
+            font-size: 1.0416666666666667vw;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            width: 8.6vw;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-bottom: 0.1vw;
+          }
+
+          .small {
+            align-self: stretch;
+            color: rgba(255, 255, 255, 0.50);
+            font-size: 0.625vw;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
           }
         }
+
+        .right {
+          display: flex;
+          width: 0.8333333333333334vw;
+          justify-content: flex-end;
+          align-items: center;
+          gap: 0.5208333333333334vw;
+          flex-shrink: 0;
+        }
       }
 
-      .sender {
-        background-color: #0A84FF;
-
-        right: 0;
-      }
-
-      .receiver {
-        background-color: #979797;
-
-        left: 0;
-      }
-
-      .inputSFsada {
+      .innerCont {
+        width: 15.052083333333334vw;
+        flex-shrink: 0;
+        border-radius: 5px;
+        background: rgba(255, 255, 255, 0.12);
+        margin-left: 0.8vw;
+        margin-top: 1.5vw;
         display: flex;
+        padding: 0.3645833333333333vw 0px;
+        flex-direction: column;
         align-items: center;
+        gap: 0.3645833333333333vw;
+
+        .conta1 {
+          display: flex;
+          width: 14.010416666666666vw;
+          justify-content: space-between;
+          align-items: center;
+
+          .innerConta1 {
+            display: flex;
+            align-items: center;
+            gap: 0.5645833333333333vw;
+            flex: 1 0 0;
+
+            .textConta {
+              display: flex;
+              flex-direction: column;
+              align-items: flex-start;
+              flex: 1 0 0;
+
+              .text1 {
+                color: #FFF;
+                font-size: 15px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: normal;
+                align-self: stretch;
+              }
+
+              .text2 {
+                align-self: stretch;
+                color: rgba(255, 255, 255, 0.20);
+                font-size: 11px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: normal;
+              }
+            }
+          }
+        }
+      }
+
+      .soundheader {
+        margin-top: 2.3vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0px;
+        gap: 1.7vw;
+        margin-left: 0.6vw;
+
+        .back {
+          display: flex;
+          align-items: center;
+          padding: 0px;
+          gap: 0.3125vw;
+          width: 2.34375vw;
+          height: 0.9895833333333334vw;
+        }
+
+        .name {
+          width: 8.072916666666666vw;
+          height: 0.9895833333333334vw;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 0.8854166666666666vw;
+          line-height: 0.9895833333333334vw;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          letter-spacing: 0.01em;
+          color: #FFFFFF;
+          flex: none;
+          order: 0;
+          flex-grow: 0;
+        }
+      }
+
+      .mantine-Slider-track::before {
+        background-color: #454545 !important;
+      }
+
+      .cancelButton {
+        display: flex;
+        width: 14.583333333333334vw;
+        padding: 0.5208333333333334vw 0px 0.46875vw 0px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.3125vw;
+        background: #373737;
+        color: #FF3E41;
+        text-align: center;
+        font-size: 1.0416666666666667vw;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        cursor: pointer;
+      }
+
+      .inputPage {
+        width: 14.583333333333334vw;
+        height: 4.6875vw;
+        margin-bottom: 0.5vw;
+        flex-shrink: 0;
+        border-radius: 0.3125vw;
+        background: #373737;
+
+        .title {
+          color: #ffffff;
+          text-align: center;
+          font-size: 0.8854166666666666vw;
+          margin-top: 0.4vw;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+
+        .Dsadsadsa {
+          ::placeholder {
+            color: #ffffff;
+            letter-spacing: 0.05vw;
+            font-size: 0.7854166666666666vw;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+          }
+        }
+      }
+
+      .contasa {
+        width: 90%;
+        margin-left: 4%;
+        margin-top: 1vw;
+        font-weight: 500;
+        display: flex;
         justify-content: space-between;
-        margin-top: 0.8vw;
-        position: relative;
+        align-items: center;
       }
     }
   }
@@ -792,7 +942,7 @@
     width: 8.854166666666666vw;
     height: 0.2604166666666667vw;
     flex-shrink: 0;
-    border-radius: 7px;
+    border-radius: 0.3645833333333333vw;
     background: #D9D9D9;
     position: absolute;
     bottom: 0.4vw;
@@ -1476,6 +1626,27 @@
       font-weight: 600;
       line-height: normal;
     }
+  }
+}
+
+.customSwitch {
+  width: 1.5625vw;
+  height: 1.0416666666666667vw;
+  background: #787880;
+  border-radius: 5.208333333333333vw;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  .thumb {
+    width: 0.8333333333333334vw;
+    height: 0.8333333333333334vw;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 0px 0.052083333333333336vw rgba(0, 0, 0, 0.04), 0px 0.15625vw 0.4166666666666667vw rgba(0, 0, 0, 0.15), 0px 0.15625vw 0.052083333333333336vw rgba(0, 0, 0, 0.06);
+    border-radius: 100%;
   }
 }
 
