--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -1149,12 +1149,88 @@
                 font-weight: 500;
                 line-height: normal;
               }
+
               font-weight: 500;
               width: 13.5vw;
               color: #ffffff;
               background-color: #0a84ff00;
               outline: none;
               border: none;
+            }
+          }
+        }
+      }
+
+      .appstore {
+        display: flex;
+        width: 15.625vw;
+        height: 28.645833333333332vw;
+        overflow-y: auto;
+        overflow-x: hidden;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5208333333333334vw;
+        flex-shrink: 0;
+        margin-left: 0.6vw;
+        margin-top: 0.5vw;
+
+        .appStoreBox {
+          display: flex;
+          padding: 0.46875vw 0.15625vw;
+          align-items: center;
+          gap: 1.1979166666666667vw;
+          align-self: stretch;
+
+          .installIcons {
+            display: flex;
+            width: 3vw;
+            height: 1.2vw;
+            padding: 0.052083333333333336vw 0.3645833333333333vw;
+            justify-content: center;
+            align-items: center;
+            gap: 0.5208333333333334vw;
+            border-radius: 0.20833333333333334vw;
+            background: #5c5c5c;
+            color: #E8F3FF;
+            text-align: center;
+            font-size: 0.625vw;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            letter-spacing: 0.041666666666666664vw;
+          }
+
+          .appStoreDetails {
+            display: flex;
+            align-items: center;
+            gap: 0.3125vw;
+            flex: 1 0 0;
+
+            .appStoreDetailsTexts {
+              display: flex;
+              flex-direction: column;
+              align-items: flex-start;
+              flex: 1 0 0;
+
+              .titles {
+                align-self: stretch;
+                color: #FFF;
+                font-size: 0.8854166666666666vw;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                letter-spacing: 0.052083333333333336vw;
+              }
+
+              .descriptions {
+                align-self: stretch;
+                color: #9C9C9C;
+                font-size: 0.5729166666666666vw;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                letter-spacing: 0.036458333333333336vw;
+              }
             }
           }
         }
